--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,6 @@
 .App-link {
   color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-div {
+  margin-bottom: 5vh;
 }
